fixed hero title spacings

--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -13,19 +13,21 @@
   align-items: center;
   user-select: none;
 }
-.section_hero_title {
-  font-size: 5rem;
-  color: #ffffff;
-  line-height: 6rem;
-  letter-spacing: 0.2em;
-  user-select: none;
-}
 .section_hero_title_logo {
   font-size: 8rem;
   letter-spacing: 0.1em;
-  line-height: 9.6rem;
+  line-height: 11.6rem;
+  font-weight: 400;
   position: relative;
   top: 5px;
+}
+.section_hero_title {
+  font-size: 5rem;
+  color: #ffffff;
+  line-height: 7.2rem;
+  letter-spacing: 0.2em;
+  font-weight: 400;
+  user-select: none;
 }
 .section_hero_title_logo::before {
   position: absolute;
